Chat->Profile navigation (//TODO костыль...) ChatListAdapter unstable